# Slicer-PairwiseMetrics

./: CMakeLists.txt
PairwiseMetrics/: CMakeLists.txt  qSlicerPairwiseMetricsModule.cxx  qSlicerPairwiseMetricsModule.h  qSlicerPairwiseMetricsModuleWidget.cxx  qSlicerPairwiseMetricsModuleWidget.h
PairwiseMetrics/Logic/: vtkSlicerPairwiseMetricsLogic.cxx  vtkSlicerPairwiseMetricsLogic.h
PairwiseMetrics/Resources/: qSlicerPairwiseMetricsModule.qrc
PairwiseMetrics/Resources/UI/: qSlicerPairwiseMetricsFooBarWidget.ui  qSlicerPairwiseMetricsModuleWidget.ui
PairwiseMetrics/Widgets/: qSlicerPairwiseMetricsFooBarWidget.cxx  qSlicerPairwiseMetricsFooBarWidget.h
